<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE xml><project xmlns="https://maven.apache.org/POM/4.0.0"
	xmlns:xsi="https://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="https://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>com.fathzer</groupId>
		<artifactId>parent-pom</artifactId>
		<version>1.0.8</version>
	</parent>
	<artifactId>jchess-core</artifactId>
	<version>0.0.9-SNAPSHOT</version>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<check-dependencies-java-version>17</check-dependencies-java-version>
	    <maven.compiler.release>17</maven.compiler.release>
		<sonar.organization>fathzer-games</sonar.organization>
	</properties>

	<dependencies>
		<dependency>
			<groupId>com.fathzer</groupId>
			<artifactId>games-core</artifactId>
			<version>0.0.11-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.fathzer</groupId>
			<artifactId>chess-utils</artifactId>
			<version>0.0.3-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.32</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>2.0.7</version>
		</dependency>
		
		<dependency>
			<groupId>com.fathzer</groupId>
			<artifactId>jchess-perft-dataset</artifactId>
			<version>1.0.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>5.10.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>2.0.7</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
			</plugin>			
		</plugins>
	</build>
</project>